Se agregó el .gitignore, se limpiaron archivos compilados. También se arregló un problema de diseño con el formulario de solicitud de agua potable, se agregó el entorno de Nodejs para el microservicio. -Se está diseñando un formulario simple para expansión de acueducto y agregando su evento en js.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Roboto', sans-serif; /* se modifica el tipo de fuente */
+    font-family: 'Roboto', sans-serif;
+    /* se modifica el tipo de fuente */
     margin: 0;
 }
 
@@ -20,7 +21,7 @@ body {
     justify-content: space-between;
     background: linear-gradient(135deg, #0077b6 0%, #00b4d8 100%);
     border-bottom: 3px solid black;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 0 50px;
     margin-bottom: 10px;
 }
@@ -83,71 +84,110 @@ body {
 
 .nav-list li a:hover {
     transform: scale(1.05);
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4); 
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .login-container {
-    display: flex; /* Utiliza flexbox para el diseño */
-    width: 400px; /* Ancho del cuadro */
-    margin: 100px auto; /* Centra el cuadro horizontalmente y da espacio arriba */
-    padding: 30px; /* Espacio interno entre el contenido y el borde */
-    border: 3px solid #000; /* Borde del cuadro */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
-    background-color: #fff; /* Fondo blanco */
-    flex-direction: column; /* Coloca los elementos en columna */
+    display: flex;
+    /* Utiliza flexbox para el diseño */
+    width: 400px;
+    /* Ancho del cuadro */
+    margin: 100px auto;
+    /* Centra el cuadro horizontalmente y da espacio arriba */
+    padding: 30px;
+    /* Espacio interno entre el contenido y el borde */
+    border: 3px solid #000;
+    /* Borde del cuadro */
+    border-radius: 8px;
+    /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Sombra para darle profundidad */
+    background-color: #fff;
+    /* Fondo blanco */
+    flex-direction: column;
+    /* Coloca los elementos en columna */
 }
 
 .login-container .form-title {
-    text-align: center; /* Centra el texto del título */
-    font-size: 25px; /* Tamaño de fuente del título */
-    margin-bottom: 20px; /* Espacio debajo del título */
-    color:#2b78e4; /* Color del texto del título */
+    text-align: center;
+    /* Centra el texto del título */
+    font-size: 25px;
+    /* Tamaño de fuente del título */
+    margin-bottom: 20px;
+    /* Espacio debajo del título */
+    color: #2b78e4;
+    /* Color del texto del título */
 }
 
-.form-group, .form-field {
-    display: flex; /* Utiliza flexbox para el diseño */
-    justify-content: left; /* Centra el contenido horizontalmente */
-    align-items: center; /* Alinea los elementos al centro */
-    margin: 10px 0; /* Espacio entre las etiquetas de formulario */
-    width: 100%; /* Ancho completo del contenedor */
-    padding: 4px; /* Espacio interno entre el contenido y el borde */
+.login-container .form-group,
+.form-field {
+    display: flex;
+    /* Utiliza flexbox para el diseño */
+    justify-content: left;
+    /* Centra el contenido horizontalmente */
+    align-items: center;
+    /* Alinea los elementos al centro */
+    margin: 10px 0;
+    /* Espacio entre las etiquetas de formulario */
+    width: 100%;
+    /* Ancho completo del contenedor */
+    padding: 4px;
+    /* Espacio interno entre el contenido y el borde */
 }
 
 .button {
-    background-color: #2b78e4; /* Color de fondo del botón */
-    color: white; /* Color del texto del botón */
-    border: none; /* Sin borde */
-    border-radius: 8px; /* Bordes redondeados */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    background-color: #2b78e4;
+    /* Color de fondo del botón */
+    color: white;
+    /* Color del texto del botón */
+    border: none;
+    /* Sin borde */
+    border-radius: 8px;
+    /* Bordes redondeados */
+    cursor: pointer;
+    /* Cambia el cursor al pasar sobre el botón */
 
     /*No noto diferencia al poner el cursor en el botón, pero igual dejo
     el diseño o bloque de código, por si acaso*/
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para darle profundidad */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* Sombra para darle profundidad */
     padding: 6px;
     font-weight: bold;
 }
 
 .button:hover {
-    transform: scale(1.05); /* Aumenta el tamaño del botón al pasar el mouse */
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3); /* Aumenta la sombra al pasar el mouse */
+    transform: scale(1.05);
+    /* Aumenta el tamaño del botón al pasar el mouse */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+    /* Aumenta la sombra al pasar el mouse */
 }
 
-input, select {
-    border-radius: 10px; /* Bordes redondeados */
+input,
+select {
+    border-radius: 10px;
+    /* Bordes redondeados */
     border-color: #000;
-    padding: 4px 12px; /* Espacio interno entre el contenido y el borde */
-    width: 71%; /* Ancho del input */
+    padding: 4px 12px;
+    /* Espacio interno entre el contenido y el borde */
+    width: 71%;
+    /* Ancho del input */
 }
 
 select {
-    font-family: inherit; /* Usar la misma fuente que el resto del formulario */
-    font-size: inherit; /* Mismo tamaño de fuente */
-    padding: 2px 12px; /* Ajustar según necesites para que coincida */
-    border: 2px solid #000; /* Borde similar a otros inputs */
-    border-radius: 10px; /* Bordes redondeados si los otros los tienen */
-    width: 80%; /* O el ancho que necesites */
-    background-color: white; /* Fondo blanco como otros inputs */
+    font-family: inherit;
+    /* Usar la misma fuente que el resto del formulario */
+    font-size: inherit;
+    /* Mismo tamaño de fuente */
+    padding: 2px 12px;
+    /* Ajustar según necesites para que coincida */
+    border: 2px solid #000;
+    /* Borde similar a otros inputs */
+    border-radius: 10px;
+    /* Bordes redondeados si los otros los tienen */
+    width: 80%;
+    /* O el ancho que necesites */
+    background-color: white;
+    /* Fondo blanco como otros inputs */
 }
 
 .register-button {
@@ -160,24 +200,39 @@ select {
 }
 
 .register-button a {
-    text-decoration: none;;
-    background-color: rgb(88, 84, 84); /* Fondo gris */
-    color: white; /* Texto blanco */
-    border: none; /* Sin borde */
-    border-radius: 8px; /* Bordes redondeados */
-    padding: 6px 20px; /* Espacio interno */
-    font-size: 16px; /* Tamaño del texto */
-    font-weight: bold; /* Texto en negrita */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Sombra sutil */
-    text-align: center; /* Centra el texto dentro del botón */
-    transition: transform 0.2s ease, box-shadow 0.2s ease; /* Transición suave */
+    text-decoration: none;
+    ;
+    background-color: rgb(88, 84, 84);
+    /* Fondo gris */
+    color: white;
+    /* Texto blanco */
+    border: none;
+    /* Sin borde */
+    border-radius: 8px;
+    /* Bordes redondeados */
+    padding: 6px 20px;
+    /* Espacio interno */
+    font-size: 16px;
+    /* Tamaño del texto */
+    font-weight: bold;
+    /* Texto en negrita */
+    cursor: pointer;
+    /* Cambia el cursor al pasar sobre el botón */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    /* Sombra sutil */
+    text-align: center;
+    /* Centra el texto dentro del botón */
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    /* Transición suave */
 }
 
 .register-button button:hover {
-    background-color: gray; /* Cambia el fondo al pasar el mouse */
-    transform: scale(1.05); /* Aumenta ligeramente el tamaño */
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3); /* Agrega sombra */
+    background-color: gray;
+    /* Cambia el fondo al pasar el mouse */
+    transform: scale(1.05);
+    /* Aumenta ligeramente el tamaño */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+    /* Agrega sombra */
 }
 
 .button {
@@ -189,7 +244,8 @@ select {
     margin: -10px;
 }
 
-.register-text, .register-button {
+.register-text,
+.register-button {
     text-align: center;
 }
 
@@ -211,7 +267,7 @@ select {
         text-align: center;
         margin-bottom: 15px;
     }
-    
+
     .nav-list {
         display: flex;
         flex-wrap: wrap;
@@ -252,9 +308,12 @@ select {
 }
 
 .form-title {
-    text-align: center; /* Centra el texto del título */
-    font-size: 25px; /* Tamaño de fuente del título */
-    color:#2b78e4; /* Color del texto del título */
+    text-align: center;
+    /* Centra el texto del título */
+    font-size: 25px;
+    /* Tamaño de fuente del título */
+    color: #2b78e4;
+    /* Color del texto del título */
     border-bottom: 3px solid black;
     margin-bottom: 30px;
     padding-bottom: 20px;
@@ -263,12 +322,18 @@ select {
 .button-servicios {
     display: flex;
     margin: 20px auto;
-    background-color: #2b78e4; /* Color de fondo del botón */
-    color: white; /* Color del texto del botón */
-    border: 2px solid black; /* Sin borde */
-    border-radius: 8px; /* Bordes redondeados */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para darle profundidad */
+    background-color: #2b78e4;
+    /* Color de fondo del botón */
+    color: white;
+    /* Color del texto del botón */
+    border: 2px solid black;
+    /* Sin borde */
+    border-radius: 8px;
+    /* Bordes redondeados */
+    cursor: pointer;
+    /* Cambia el cursor al pasar sobre el botón */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* Sombra para darle profundidad */
     padding: 6px;
     font-weight: bold;
     width: 210px;
@@ -278,26 +343,45 @@ select {
 }
 
 .button-servicios:hover {
-    transform: scale(1.05); /* Aumenta el tamaño del botón al pasar el mouse */
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3); /* Aumenta la sombra al pasar el mouse */
+    transform: scale(1.05);
+    /* Aumenta el tamaño del botón al pasar el mouse */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+    /* Aumenta la sombra al pasar el mouse */
 }
 
 
 .form-section {
-    display: flex; /* Utiliza flexbox para el diseño */
-    width: 400px; /* Ancho del cuadro */
-    margin: 100px auto; /* Centra el cuadro horizontalmente y da espacio arriba */
-    padding: 30px; /* Espacio interno entre el contenido y el borde */
-    border: 3px solid #000; /* Borde del cuadro */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
-    background-color: #fff; /* Fondo blanco */
-    flex-direction: column; /* Coloca los elementos en columna */
+    display: flex;
+    /* Utiliza flexbox para el diseño */
+    width: 400px;
+    /* Ancho del cuadro */
+    margin: 100px auto;
+    /* Centra el cuadro horizontalmente y da espacio arriba */
+    padding: 30px;
+    /* Espacio interno entre el contenido y el borde */
+    border: 3px solid #000;
+    /* Borde del cuadro */
+    border-radius: 8px;
+    /* Bordes redondeados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Sombra para darle profundidad */
+    background-color: #fff;
+    /* Fondo blanco */
+    flex-direction: column;
+    /* Coloca los elementos en columna */
 }
 
-.form-group {
+.form-section .información .form-group {
+    display: block !important;
+    margin-bottom: 15px;
+    width: 100%;
+    flex-direction: column !important;
+}
+
+.form-section .form-group label {
     display: block;
     margin-bottom: 5px;
+    font-weight: bold;
 }
 
 #información {
@@ -328,8 +412,10 @@ select {
 .main-container {
     position: relative;
     width: 100%;
-    height: 500px; /* Altura fija para reservar espacio */
-    margin-bottom: 50px; /* Separación adicional */
+    height: 500px;
+    /* Altura fija para reservar espacio */
+    margin-bottom: 50px;
+    /* Separación adicional */
 }
 
 .main-text {
@@ -351,13 +437,17 @@ select {
     margin-top: 600px;
 }
 
-.login-container, .servicios, .form-section {
-    position: relative; /* Importante para el posicionamiento */
+.login-container,
+.servicios,
+.form-section {
+    position: relative;
+    /* Importante para el posicionamiento */
 }
 
 .btn-volver {
     position: absolute;
-    top: -50px; /* Lo coloca arriba del cuadro */
+    top: -50px;
+    /* Lo coloca arriba del cuadro */
     left: 0;
     background-color: #000000;
     color: #e9e9e9;
@@ -378,28 +468,35 @@ select {
     background-color: gray;
     padding: 20px;
     display: flex;
-    justify-content: space-evenly; /* Distribuye con espacios iguales */
+    justify-content: space-evenly;
+    /* Distribuye con espacios iguales */
     align-items: center;
     flex-wrap: wrap;
-    overflow: hidden; /* Controla el desbordamiento */
+    overflow: hidden;
+    /* Controla el desbordamiento */
 }
 
 .info-item {
     position: relative;
     width: 300px;
     height: 260px;
-    margin: 0; /* Sin márgenes irregulares */
-    overflow: hidden; /* Importante: controla el desbordamiento de la imagen */
-    border-radius: 8px; /* Opcional: para bordes limpios */
+    margin: 0;
+    /* Sin márgenes irregulares */
+    overflow: hidden;
+    /* Importante: controla el desbordamiento de la imagen */
+    border-radius: 8px;
+    /* Opcional: para bordes limpios */
 }
 
 .info-item img {
-    width: 150%; /* Mantienes tu 150% */
+    width: 150%;
+    /* Mantienes tu 150% */
     height: 260px;
     object-fit: cover;
     object-position: center;
     /* Centramos la imagen dentro del contenedor */
-    margin-left: -25%; /* Esto centra la imagen desbordada: (150% - 100%) / 2 = 25% */
+    margin-left: -25%;
+    /* Esto centra la imagen desbordada: (150% - 100%) / 2 = 25% */
 }
 
 .info-item h3 {
@@ -408,7 +505,7 @@ select {
     left: 0;
     width: 100%;
     color: #fff;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     margin: 0;
     padding: 8px 0;
     text-align: center;
@@ -423,7 +520,7 @@ select {
         flex-direction: column;
         gap: 20px;
     }
-    
+
     .info-item {
         width: 280px;
     }
@@ -441,12 +538,15 @@ select {
     background-color: #000;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    width: 1800px; /* ← Usar WIDTH en lugar de max-width */
-    height: 1200px; /* ← Altura que quieras */
+    width: 1800px;
+    /* ← Usar WIDTH en lugar de max-width */
+    height: 1200px;
+    /* ← Altura que quieras */
     padding: 20px;
     margin: 10px auto;
     border-radius: 10px;
-    gap: 0; /* ← Asegúrate de tener esto */
+    gap: 0;
+    /* ← Asegúrate de tener esto */
 }
 
 .noticia-texto-der {
@@ -475,7 +575,7 @@ select {
 }
 
 .noticia-imagen-der {
- display: block;
+    display: block;
 }
 
 .noiticia-imagen-der img {
@@ -501,9 +601,11 @@ select {
 
 .footer {
     background-color: #000;
-    color: #ccc; /* Light gray for text */
+    color: #ccc;
+    /* Light gray for text */
     padding: 30px 50px;
-    font-family: Arial, sans-serif; /* A common sans-serif font */
+    font-family: Arial, sans-serif;
+    /* A common sans-serif font */
 }
 
 .footer-header {
@@ -529,7 +631,8 @@ select {
 
 .footer-divider {
     height: 1px;
-    background-color: #444; /* Dark gray line */
+    background-color: #444;
+    /* Dark gray line */
     margin: 15px 0;
     border: none;
 }
@@ -542,7 +645,8 @@ select {
 }
 
 .footer-info {
-    flex-grow: 1; /* Allows it to take available space */
+    flex-grow: 1;
+    /* Allows it to take available space */
 }
 
 .footer-info p {
@@ -554,7 +658,8 @@ select {
 .chat-bubble {
     width: 130px;
     height: 130px;
-    background-color: #d93025; /* A standard red color */
+    background-color: #d93025;
+    /* A standard red color */
     border-radius: 50%;
     display: flex;
     flex-direction: column;
@@ -563,7 +668,8 @@ select {
     color: #fff;
     text-align: center;
     font-weight: bold;
-    flex-shrink: 0; /* Prevents the bubble from shrinking */
+    flex-shrink: 0;
+    /* Prevents the bubble from shrinking */
 }
 
 .chat-bubble span:first-child {
